docs: checkpoint 2 with more stuff

--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -3,9 +3,11 @@ title: Configuration
 description: How to configure rovr
 ---
 
-import { FileTree } from '@astrojs/starlight/components'
+import { FileTree } from "@astrojs/starlight/components";
+import { Aside } from '@astrojs/starlight/components';
 
 rovr's configuration is held in a single location. you can find it by running
+
 ```sh
 rovr --config-path
 ```
@@ -21,15 +23,18 @@ inside it, you can see 3 files if you previously launched rovr
 
 </FileTree>
 
-
 ### config.toml
+
 the config is handled in a simple config file.
 
+<Aside type="tip">
 it also has a schema available, so if you use either [`tombi`](https://github.com/tombi-toml/tombi) or [`taplo`](https://github.com/tamasfe/taplo) to see an autocompletion popup.
+</Aside>
 
 for the full schema, please refer to the [`JSON Schema for Humans`](/schema) page
 
 ### styles.tcss
+
 styling in textual is handled by `tcss` files, a simplified version of the web's `css`. A reference is available in the [textual docs](https://textual.textualize.io/styles/)
 
 rovr comes with some variables pre-initialised, that you can overwrite.
@@ -58,9 +63,11 @@ $footer_focus_height: 10;
 For more advanced styling, refer to [`configuration/themeing`](/configuration/themeing)
 
 ### pins.json
+
 this file doesn't have a schema, mainly because it is pretty simple
 
 the file follows a schema as such
+
 ```json
 {
   "default": [
@@ -79,7 +86,9 @@ the file follows a schema as such
   ]
 }
 ```
+
 the path supports variables to a fixed path
+
 ```scss
 $DOCUMENTS: /* user documents directory */
 $DOWNLOADS: /* user downloads directory */
@@ -90,4 +99,5 @@ $HOME:      /* user home directory (~)  */
 $VIDEOS:    /* user videos directory    */
 $CONFIG:    /* user config directory    */
 ```
+
 so, you can have a path as `$home/games` and it will expand to `~/games` or `%USERPROFILE%/games` depending on your os
