--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,36 +1,36 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: rovr
+description: A modern, customizable, and aesthetically pleasing terminal file explorer.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: A modern, customizable, and aesthetically pleasing terminal file explorer.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Get Started
+      link: /overview/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: View on GitHub
+      link: https://github.com/NSPC911/rovr
       icon: external
-      variant: minimal
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
-
-## Next steps
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="Modern TUI" icon="laptop">
+    `rovr` provides a modern and intuitive terminal user interface powered by
+    Textual.
+  </Card>
+  <Card title="Customizable" icon="setting">
+    Tailor the appearance, keybindings, and features to your liking through
+    simple configuration files.
+  </Card>
+  <Card title="Feature-rich" icon="rocket">
+    Enjoy tabs, file previews, plugins, and all the essential file operations
+    you need.
+  </Card>
+  <Card title="Cross-platform" icon="open-book">
+    works on Windows, macOS, and Linux.
+  </Card>
 </CardGrid>
