--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -1,15 +1,15 @@
 ---
-title: Tutorial
-description: A tutorial to using rovr
+title: tutorial
+description: a tutorial to using rovr
 ---
 
 this tutorial will guide you through the basic usage of `rovr`.
 
-### panel traversal
+## panel traversal
 
 `rovr` uses a background-highlighted option to show your currently selected item, and switches to a different colored text when unfocused.
 
-#### travelling in lists
+### travelling in lists
 
 - move cursor right/select option: `l` or `right` arrow key
 - move cursor left: `h` or `left` arrow key
@@ -18,7 +18,7 @@ this tutorial will guide you through the basic usage of `rovr`.
 - go to the first item: `g` or `home`
 - go to the last item: `g` or `end`
 
-#### unique to the main file list
+### unique to the main file list
 
 - go up the file tree: `h` or `left` arrow key
 - go down the file tree: `l`, `right` arrow key, or `enter`
