--- a/docs/src/content/docs/guides/user-interface.mdx
+++ b/docs/src/content/docs/guides/user-interface.mdx
@@ -1,37 +1,37 @@
 ---
-title: User Interface
-description: An overview of the rovr user interface and how to navigate it.
+title: user interface
+description: an overview of the rovr user interface and how to navigate it.
 ---
 
-`rovr`'s user interface is composed of several panels. You can navigate between them using the keyboard.
+`rovr`'s user interface is composed of several panels. you can navigate between them using the keyboard.
 
-### Panels
+## panels
 
-The main panels are:
+the main panels are:
 
-- **Pinned Folder Sidebar:** A list of your favorite or frequently accessed folders. (Focus with `s`)
-- **File List:** The main panel, showing the files and folders in the current directory.
-- **Preview Sidebar:** Shows a preview of the selected file or folder. (Focus with `i`)
-- **Footer:** Contains three smaller panels:
-  - **Processes List:** Shows ongoing processes like copying or deleting files. (Focus with `f6`)
-  - **Metadata List:** Displays metadata for the selected item. (Focus with `m`)
-  - **Clipboard List:** Shows items that you have copied or cut. (Focus with `c`)
+- pinned folder sidebar: a list of your favorite or frequently accessed folders. (focus with `s`)
+- file list: the main panel, showing the files and folders in the current directory.
+- preview sidebar: shows a preview of the selected file or folder. (focus with `i`)
+- footer: contains three smaller panels:
+  - processes list: shows ongoing processes like copying or deleting files. (focus with `f6`)
+  - metadata list: displays metadata for the selected item. (focus with `m`)
+  - clipboard list: shows items that you have copied or cut. (focus with `c`)
 
-To return focus to the main file list from any other panel, press `esc`.
+to return focus to the main file list from any other panel, press `esc`.
 
-### Toggling Panel Visibility
+## toggling panel visibility
 
-You can show or hide panels to customize your view:
+you can show or hide panels to customize your view:
 
-- **Pinned Folder Sidebar:** `Shift+S`
-- **Preview Sidebar:** `Shift+I`
-- **Footer (all three panels):** `Shift+F`
+- pinned folder sidebar: `shift+s`
+- preview sidebar: `shift+i`
+- footer (all three panels): `shift+f`
 
-### Tabs
+## tabs
 
 `rovr` supports tabs to manage multiple file list views simultaneously.
 
-- **Create a new tab:** `n`
-- **Close the current tab:** `w`
-- **Go to the next tab:** `ctrl+j`
-- **Go to the previous tab:** `ctrl+k`
+- create a new tab: `n`
+- close the current tab: `w`
+- go to the next tab: `ctrl+j`
+- go to the previous tab: `ctrl+k`
