--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -1,6 +1,6 @@
 ---
-title: Configuration
-description: How to configure rovr
+title: configuration
+description: how to configure rovr
 ---
 
 import { FileTree } from "@astrojs/starlight/components";
@@ -23,7 +23,7 @@ inside it, you can see 3 files if you previously launched rovr
 
 </FileTree>
 
-### config.toml
+## config.toml
 
 the config is handled in a simple config file.
 
@@ -33,7 +33,7 @@ it also has a schema available, so if you use either [`tombi`](https://github.co
 
 for the full schema, please refer to the [`JSON Schema for Humans`](/schema) page
 
-### styles.tcss
+## styles.tcss
 
 styling in textual is handled by `tcss` files, a simplified version of the web's `css`. A reference is available in the [textual docs](https://textual.textualize.io/styles/)
 
@@ -62,7 +62,7 @@ $footer_focus_height: 10;
 
 For more advanced styling, refer to [`configuration/themeing`](/configuration/themeing)
 
-### pins.json
+## pins.json
 
 this file doesn't have a schema, mainly because it is pretty simple
 
