--- a/docs/src/content/docs/features/image-previews.mdx
+++ b/docs/src/content/docs/features/image-previews.mdx
@@ -1,6 +1,6 @@
 ---
-title: Image Previews
-description: Understanding how rovr displays images in the terminal.
+title: image previews
+description: how rovr displays images in the terminal.
 ---
 
 import { Code } from "@astrojs/starlight/components";
@@ -9,7 +9,7 @@ import { Code } from "@astrojs/starlight/components";
 
 however, image support depends on the capabilities of your terminal emulator. different terminals support different image protocols.
 
-### supported terminals
+## supported terminals
 
 here is a summary of terminals and their support for the image protocols used by `rovr`:
 
@@ -31,7 +31,7 @@ here is a summary of terminals and their support for the image protocols used by
 
 > the `iterm2 inline images` protocol is not supported. see [lnqs/textual-image #68](https://github.com/lnqs/textual-image/issues/68) for more details.
 
-### configuring the image protocol
+## configuring the image protocol
 
 if you are using a terminal that doesn't support the default image protocol, `textual-image` will fall back to a `half-cell` representation.
 
