style: prettiered code

--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -4,7 +4,7 @@ description: how to configure rovr
 ---
 
 import { FileTree } from "@astrojs/starlight/components";
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 rovr's configuration is held in a single location. you can find it by running
 
@@ -28,7 +28,9 @@ inside it, you can see 3 files if you previously launched rovr
 the config is handled in a simple config file.
 
 <Aside type="tip">
-it also has a schema available, so if you use either [`tombi`](https://github.com/tombi-toml/tombi) or [`taplo`](https://github.com/tamasfe/taplo) to see an autocompletion popup.
+  it also has a schema available, so if you use either
+  [`tombi`](https://github.com/tombi-toml/tombi) or
+  [`taplo`](https://github.com/tamasfe/taplo) to see an autocompletion popup.
 </Aside>
 
 for the full schema, please refer to the [`JSON Schema for Humans`](/schema) page
