--- a/docs/src/content/docs/overview.mdx
+++ b/docs/src/content/docs/overview.mdx
@@ -24,6 +24,12 @@ I can't answer this question, but I can answer why you _shouldnt_ use rovr.<br/>
 
 I had quite some issues with [superfile](https://github.com/yorukot/superfile). it is an amazing project, and you should definitely go check it out.
 
-<br />however, some issues I had was with its performance. spf does not utilise either threads nor asyncio, everything runs on a single app process, which can lead to plenty of lag when travelling.
-<br />I wouldve loved to fix these issues, but I dont have any golang background, and I found [textual](https://github.com/Textualize/Textual) as a framework, and really wanted to put my skills to the test.
-<br />so I guess we are here now.
+<br />
+however, some issues I had was with its performance. spf does not utilise either
+threads nor asyncio, everything runs on a single app process, which can lead to
+plenty of lag when travelling.
+<br />I wouldve loved to fix these issues, but I dont have any golang
+background, and I found [textual](https://github.com/Textualize/Textual) as a
+framework, and really wanted to put my skills to the test.
+<br />
+so I guess we are here now.
