--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -19,13 +19,16 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
   <Card title="Modern TUI" icon="laptop">
-    `rovr` provides a modern and intuitive terminal user interface powered by Textual.
+    `rovr` provides a modern and intuitive terminal user interface powered by
+    Textual.
   </Card>
   <Card title="Customizable" icon="setting">
-    tailor the appearance, keybindings, and features to your liking through simple configuration files.
+    tailor the appearance, keybindings, and features to your liking through
+    simple configuration files.
   </Card>
   <Card title="Feature-rich" icon="rocket">
-    enjoy tabs, file previews, plugins, and other features you thought you didn't need.
+    enjoy tabs, file previews, plugins, and other features you thought you
+    didn't need.
   </Card>
   <Card title="Cross-platform" icon="open-book">
     works on windows, macos, and linux.
