docs: checkpoint 4 with some slight changes

--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -16,7 +16,7 @@ this tutorial will guide you through the basic usage of `rovr`.
 - move cursor up: `k` or `up`
 - move cursor down: `j` or `down`
 - go to the first item: `g` or `home`
-- go to the last item: `g` or `end`
+- go to the last item: `shift+g` or `end`
 
 ### unique to the main file list
 
@@ -24,7 +24,7 @@ this tutorial will guide you through the basic usage of `rovr`.
 - go down the file tree: `l`, `right` arrow key, or `enter`
 - go back in history: `backspace` or `u`
 - go forwards in history: `space`
-- pin the currently focused folder: `p` or `shift+p`
+- pin the currently focused folder: `shift+p`
 - reload file list: `ctrl+r`
 
 for more details on the user interface, see the [user interface guide](/guides/user-interface).
