docs: checkpoint 5 but almost done

--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -33,7 +33,7 @@ the config is handled in a simple config file.
   [`taplo`](https://github.com/tamasfe/taplo) to see an autocompletion popup.
 </Aside>
 
-for the full schema, please refer to the [`JSON Schema for Humans`](/schema) page
+for the full schema, please refer to the [`JSON Schema for Humans`](/rovr/reference/schema) page
 
 ## styles.tcss
 
@@ -62,7 +62,7 @@ $footer_unfocus_height: 8;
 $footer_focus_height: 10;
 ```
 
-For more advanced styling, refer to [`configuration/themeing`](/configuration/themeing)
+For more advanced styling, refer to [`configuration/themeing`](./themeing)
 
 ## pins.json
 
