--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -27,6 +27,6 @@ this tutorial will guide you through the basic usage of `rovr`.
 - pin the currently focused folder: `shift+p`
 - reload file list: `ctrl+r`
 
-for more details on the user interface, see the [user interface guide](/guides/user-interface).
+for more details on the user interface, see the [user interface guide](/rovr/guides/user-interface).
 
-for a full list of actions and their keybindings, refer to the [file operations guide](/guides/file-operations) and the [keybindings reference](/reference/keybindings).
+for a full list of actions and their keybindings, refer to the [file operations guide](/rovr/guides/file-operations) and the [keybindings reference](/rovr/reference/keybindings).
