--- a/docs/src/content/docs/features/previewing-files.mdx
+++ b/docs/src/content/docs/features/previewing-files.mdx
@@ -11,11 +11,11 @@ plain text files are displayed in a text area with syntax highlighting. the lang
 
 ## bat plugin
 
-if you have [`bat`](/features/plugins#bat) installed and enabled in the `rovr` config, it will be used to display text files with syntax highlighting for much more languages and theming.
+if you have [`bat`](/rovr/features/plugins#bat) installed and enabled in the `rovr` config, it will be used to display text files with syntax highlighting for much more languages and theming.
 
 ## images
 
-`rovr` can display images directly in the terminal. refer to the [image previews](/features/image-previews) guide for more details on terminal compatibility and configuration.
+`rovr` can display images directly in the terminal. refer to the [image previews](/rovr/features/image-previews) guide for more details on terminal compatibility and configuration.
 
 ## folders
 
