--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Get Started
-      link: ./overview
+      link: /rovr/overview
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/NSPC911/rovr
