--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,14 +3,14 @@ title: rovr
 description: A modern, customizable, and aesthetically pleasing terminal file explorer.
 template: splash
 hero:
-  tagline: A modern, customizable, and aesthetically pleasing terminal file explorer.
+  tagline: a modern, customizable, and aesthetically pleasing terminal file explorer.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Get Started
+    - text: get started
       link: /rovr/overview
       icon: right-arrow
-    - text: View on GitHub
+    - text: view on github
       link: https://github.com/NSPC911/rovr
       icon: external
 ---
@@ -18,19 +18,19 @@ hero:
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
-  <Card title="Modern TUI" icon="laptop">
+  <Card title="modern tui" icon="laptop">
     `rovr` provides a modern and intuitive terminal user interface powered by
     Textual.
   </Card>
-  <Card title="Customizable" icon="setting">
+  <Card title="customizable" icon="setting">
     tailor the appearance, keybindings, and features to your liking through
     simple configuration files.
   </Card>
-  <Card title="Feature-rich" icon="rocket">
+  <Card title="feature-rich" icon="rocket">
     enjoy tabs, file previews, plugins, and other features you thought you
     didn't need.
   </Card>
-  <Card title="Cross-platform" icon="open-book">
+  <Card title="cross-platform" icon="open-book">
     works on windows, macos, and linux.
   </Card>
 </CardGrid>
