--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -7,14 +7,14 @@ description: adding extra features with plugins.
 
 ## zoxide
 
-[zoxide](https://github.com/ajeetdsouza/zoxide) is a smarter `cd` command that remembers your most used directories. `rovr` integrates with it to provide fast navigation.
+[zoxide](https://github.com/ajeetdsouza/zoxide) allows you to zip around your filesystem, and can be integrated into rovr
 
 - **enable:** `plugins.zoxide.enabled = true`
 - **keybinding:** the default keybinding to open the zoxide dialog is `z`.
 
 ## bat
 
-[bat](https://github.com/sharkdp/bat) is `cat` with syntax highlighting and git integration. `rovr` can use it for file previews.
+to allow for more file previews, [bat](https://github.com/sharkdp/bat) can be used for its syntax highlighting capabilities.
 
 - **enable:** `plugins.bat.enabled = true`
 - **executable:** you can specify the path to the `bat` executable if it's not in your system's `PATH`.
