--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -7,12 +7,16 @@ description: adding extra features with plugins.
 
 ## zoxide
 
+<img src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_zoxide.png" alt="rovr's zoxide integration"/>
+
 [zoxide](https://github.com/ajeetdsouza/zoxide) allows you to zip around your filesystem, and can be integrated into rovr
 
 - **enable:** `plugins.zoxide.enabled = true`
 - **keybinding:** the default keybinding to open the zoxide dialog is `z`.
 
 ## bat
+
+<img src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_with_bat.png" alt="rovr's bat integration"/>
 
 to allow for more file previews, [bat](https://github.com/sharkdp/bat) can be used for its syntax highlighting capabilities.
 
