--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -7,7 +7,10 @@ description: adding extra features with plugins.
 
 ## zoxide
 
-<img src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_zoxide.png" alt="rovr's zoxide integration"/>
+<img
+  src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_zoxide.png"
+  alt="rovr's zoxide integration"
+/>
 
 [zoxide](https://github.com/ajeetdsouza/zoxide) allows you to zip around your filesystem, and can be integrated into rovr
 
@@ -16,7 +19,10 @@ description: adding extra features with plugins.
 
 ## bat
 
-<img src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_with_bat.png" alt="rovr's bat integration"/>
+<img
+  src="https://github.com/NSPC911/rovr/blob/master/img/0.0.0.4/rovr_with_bat.png"
+  alt="rovr's bat integration"
+/>
 
 to allow for more file previews, [bat](https://github.com/sharkdp/bat) can be used for its syntax highlighting capabilities.
 
