--- a/docs/src/content/docs/overview.mdx
+++ b/docs/src/content/docs/overview.mdx
@@ -3,7 +3,10 @@ title: welcome to rovr
 description: overview on rovr
 ---
 
-<img src="https://github.com/NSPC911/rovr/blob/master/img/0.1.0/rovr_main.png?raw=true" alt="normal user interface"/>
+<img
+  src="https://github.com/NSPC911/rovr/blob/master/img/0.1.0/rovr_main.png?raw=true"
+  alt="normal user interface"
+/>
 
 let's use the [5w1h framework](https://en.wikipedia.org/wiki/Five_Ws) to describe rovr
 
