--- a/docs/src/content/docs/overview.mdx
+++ b/docs/src/content/docs/overview.mdx
@@ -16,10 +16,10 @@ a modern answer to a terminal file explorer, that can be customized to fit your 
 
 ## why should I use rovr?
 
-I can't answer this question, but I can answer why you _shouldnt_ use rovr.<br/>you shouldnt use rovr if
+I can't answer this question, but I can answer why you _shouldn't_ use rovr.
+<br/>you shouldnt use rovr if
 
 1. you have an existing workflow with any other file explorers (superfile excluded)
-
    other file managers like [yazi](https://github.com/sxyazi/yazi), [ranger](https://github.com/ranger/ranger) or [nnn](https://github.com/jarun/nnn) are amazing file explorers, and rovr cannot compete with their flexibility or extensibility.
 
 2. when you are allergic to non-compiled apps
