--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -6,7 +6,7 @@ description: config schema humanified
 - [1. Property `Rovr Config > interface`](#interface)
   - [1.1. Property `Rovr Config > interface > tooltips`](#interface_tooltips)
   - [1.2. Property `Rovr Config > interface > nerd_font`](#interface_nerd_font)
-  - [1.3. Property `Rovr Config > interface > use_reactive_hider`](#interface_use_reactive_hider)
+  - [1.3. Property `Rovr Config > interface > use_reactive_layout`](#interface_use_reactive_layout)
   - [1.4. Property `Rovr Config > interface > show_progress_eta`](#interface_show_progress_eta)
   - [1.5. Property `Rovr Config > interface > show_progress_percentage`](#interface_show_progress_percentage)
   - [1.6. Property `Rovr Config > interface > truncate_progress_file_path`](#interface_truncate_progress_file_path)
@@ -210,7 +210,7 @@ description: config schema humanified
 | ------------------------------------------------------------------------ | ------- | ------------------------------------------------------------------------------------------------------------------------- |
 |   [tooltips](#interface_tooltips )                                       | boolean | Show tooltips when your mouse is over a tooltip supported button.<br />This is not hot reloaded.                          |
 |   [nerd_font](#interface_nerd_font )                                     | boolean | Use nerd font for rendering icons instead of weird characters and stuff.<br />Not properly hot-reloaded.                  |
-|   [use_reactive_hider](#interface_use_reactive_hider )                   | boolean | Hide certain elements based on the width and height of the terminal.                                                      |
+|   [use_reactive_layout](#interface_use_reactive_layout )                   | boolean | Hide certain elements based on the width and height of the terminal.                                                      |
 |   [show_progress_eta](#interface_show_progress_eta )                     | boolean | When copying or deleting files, show an ETA for when the action will be completed.                                        |
 |   [show_progress_percentage](#interface_show_progress_percentage )       | boolean | When copying or deleting files, show a percentage of how much had been completed.                                         |
 |   [truncate_progress_file_path](#interface_truncate_progress_file_path ) | boolean | When the process container is using file paths, truncate the file path to only view the first and last names of the path. |
@@ -241,7 +241,7 @@ This is not hot reloaded.
 **Description:** Use nerd font for rendering icons instead of weird characters and stuff.
 Not properly hot-reloaded.
 
-### <a name="interface_use_reactive_hider"></a>1.3. Property `Rovr Config > interface > use_reactive_hider`
+### <a name="interface_use_reactive_layout"></a>1.3. Property `Rovr Config > interface > use_reactive_layout`
 
 |              |           |
 | ------------ | --------- |
