--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -5,53 +5,54 @@ description: A reference for all default keybindings in rovr.
 
 this page provides a comprehensive list of the default keybindings in `rovr`. you can customize these keybindings in your `config.toml` file.
 
-| action                       | default hotkey                                   | description                                                                                                                  |
-| ---------------------------- | ------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------- |
-| toggle_pin                   | <kbd>p</kbd>                                     | toggle the current folder in the pinned folder sidebar.                                                                      |
-| toggle_pinned_sidebar        | <kbd>s</kbd>                                     | toggle viewing the pinned sidebar.                                                                                           |
-| toggle_preview_sidebar       | <kbd>i</kbd>                                     | toggle viewing the preview sidebar.                                                                                          |
-| toggle_footer                | <kbd>f</kbd>                                     | toggle viewing the footer.                                                                                                   |
-| focus_toggle_pinned_sidebar  | <kbd>s</kbd>                                     | toggle focus between pinned folder sidebar and file list.                                                                    |
-| focus_file_list              | <kbd>escape</kbd>                                | focus the file list.                                                                                                         |
-| focus_toggle_preview_sidebar | <kbd>i</kbd>                                     | focus toggle between preview sidebar and file list.                                                                          |
-| focus_toggle_path_switcher   | <kbd>ctrl+l</kbd>                                | focus toggle between path switcher and file list.                                                                            |
-| focus_search                 | <kbd>ctrl+f</kbd>, <kbd>slash</kbd>              | focus toggle the processes container.                                                                                        |
-| focus_toggle_processes       | <kbd>f6</kbd>                                    | focus toggle the clipboard container.                                                                                        |
-| focus_toggle_clipboard       | <kbd>c</kbd>                                     | focus toggle the metadata container.                                                                                         |
-| focus_toggle_metadata        | <kbd>m</kbd>                                     | focus the search bar.                                                                                                        |
-| copy                         | <kbd>y</kbd>, <kbd>ctrl+c</kbd>                  | copy the selected files in the file list to the clipboard.                                                                   |
-| paste                        | <kbd>p</kbd>, <kbd>ctrl+v</kbd>                  | paste the selected files in the clipboard into the current directory.                                                        |
-| cut                          | <kbd>x</kbd>, <kbd>ctrl+x</kbd>                  | cut the selected files in the file list to the clipboard.                                                                    |
-| delete                       | <kbd>d</kbd>, <kbd>delete</kbd>                  | delete the selected files in the file list.                                                                                  |
-| rename                       | <kbd>r</kbd>, <kbd>f2</kbd>                      | rename the selected file in the file list to something else.                                                                 |
-| new                          | <kbd>ctrl+n</kbd>, <kbd>o</kbd>                  | create a new item in the current directory.                                                                                  |
-| zip                          | <kbd>e</kbd>                                     | enter into select mode and select/unselect everything.                                                                       |
-| unzip                        | <kbd>ctrl+e</kbd>                                | create a zip archive from selected files.                                                                                    |
-| up                           | <kbd>up</kbd>, <kbd>k</kbd>                      | extract a selected zip archive.                                                                                              |
-| down                         | <kbd>down</kbd>, <kbd>j</kbd>                    | go up the file list options.                                                                                                 |
-| up_tree                      | <kbd>left</kbd>, <kbd>h</kbd>                    | go down the file list options.                                                                                               |
-| down_tree                    | <kbd>right</kbd>, <kbd>l</kbd>, <kbd>enter</kbd> | go up the file tree.                                                                                                         |
-| page_up                      | <kbd>pageup</kbd>, <kbd>ctrl+b</kbd>             | go down the file tree, or open the currently selected item.                                                                  |
-| page_down                    | <kbd>pagedown</kbd>, <kbd>ctrl+f</kbd>           | page up in the file list options.                                                                                            |
-| home                         | <kbd>home</kbd>, <kbd>g</kbd>                    | page down in the file list options.                                                                                          |
-| end                          | <kbd>end</kbd>, <kbd>g</kbd>                     | go to the first option in the file list options.                                                                             |
-| hist_previous                | <kbd>backspace</kbd>, <kbd>u</kbd>               | go to the last option in the file list options.                                                                              |
-| hist_next                    | <kbd>space</kbd>                                 | go back in history.                                                                                                          |
-| refresh                      | <kbd>ctrl+r</kbd>, <kbd>f5</kbd>                 | go forward in history.                                                                                                       |
-| toggle_visual                | <kbd>v</kbd>                                     | refresh the file list.                                                                                                       |
-| toggle_all                   | <kbd>%</kbd>, <kbd>ctrl+a</kbd>                  | enter or exit select/visual mode.                                                                                            |
-| toggle_hidden_files          | <kbd>.</kbd>                                     | toggle listing of hidden files (those starting with a dot on Unix, or explicitly hidden on Windows/MacOS)                                              |
-| select_up                    | <kbd>shift+up</kbd>, <kbd>k</kbd>                | while in visual mode, extend the selection up.                                                                               |
-| select_down                  | <kbd>shift+down</kbd>, <kbd>j</kbd>              | while in visual mode, extend the selection down.                                                                             |
-| select_page_up               | <kbd>shift+pageup</kbd>                          | while in visual mode, extend the selection to the previous page.                                                             |
-| select_page_down             | <kbd>shift+pagedown</kbd>                        | while in visual mode, extend the selection to the next page.                                                                 |
-| select_home                  | <kbd>shift+home</kbd>                            | while in visual mode, extend the selection to the first option.                                                              |
-| select_end                   | <kbd>shift+end</kbd>                             | while in visual mode, extend the selection to the last option.                                                               |
-| tab_next                     | <kbd>ctrl+j</kbd>                                | go to the next tab, if it is available.                                                                                      |
-| tab_previous                 | <kbd>ctrl+k</kbd>                                | go to the previous tab, if it is available.                                                                                  |
-| tab_new                      | <kbd>n</kbd>                                     | create a new tab.                                                                                                            |
-| tab_close                    | <kbd>w</kbd>                                     | close the current tab.                                                                                                       |
-| preview_scroll_left          | <kbd>left</kbd>, <kbd>h</kbd>                    | while using `settings.preview_full = true`, and the preview container is focused, scroll left when this keybind is pressed.  |
-| preview_scroll_right         | <kbd>right</kbd>, <kbd>l</kbd>                   | while using `settings.preview_full = true`, and the preview container is focused, scroll right when this keybind is pressed. |
-| preview_select_left          | <kbd>shift+left</kbd>, <kbd>h</kbd>              | while using textarea for previewing, use this keybind to extend selection to the right.                                      |
-| preview_select_right         | <kbd>shift+right</kbd>, <kbd>l</kbd>             | while using textarea for previewing, use this keybind to extend selection to the left.                                       |
+| action                       | default hotkey                                 | description         |
+| ---------------------------- | ---------------------------------------------- | ------------------- |
+| toggle_pin                   | <kbd>P</kbd>                                   | Pin folder          |
+| toggle_pinned_sidebar        | <kbd>S</kbd>                                   | Toggle sidebar      |
+| toggle_preview_sidebar       | <kbd>I</kbd>                                   | Toggle preview      |
+| toggle_footer                | <kbd>F</kbd>                                   | Toggle footer       |
+| focus_toggle_pinned_sidebar  | <kbd>s</kbd>                                   | Focus sidebar       |
+| focus_file_list              | <kbd>escape</kbd>                              | Focus file list     |
+| focus_toggle_preview_sidebar | <kbd>i</kbd>                                   | Focus preview       |
+| focus_toggle_path_switcher   | <kbd>ctrl+l</kbd>                              | Focus path          |
+| focus_toggle_processes       | <kbd>f6</kbd>                                  | Focus processes     |
+| focus_toggle_clipboard       | <kbd>c</kbd>                                   | Focus clipboard     |
+| focus_toggle_metadata        | <kbd>m</kbd>                                   | Focus metadata      |
+| focus_search                 | <kbd>ctrl+f</kbd> <kbd>slash</kbd>             | Search              |
+| copy                         | <kbd>y</kbd> <kbd>ctrl+c</kbd>                 | Copy                |
+| paste                        | <kbd>p</kbd> <kbd>ctrl+v</kbd>                 | Paste               |
+| cut                          | <kbd>x</kbd> <kbd>ctrl+x</kbd>                 | Cut                 |
+| delete                       | <kbd>d</kbd> <kbd>delete</kbd>                 | Delete              |
+| rename                       | <kbd>r</kbd> <kbd>f2</kbd>                     | Rename              |
+| new                          | <kbd>ctrl+n</kbd> <kbd>o</kbd>                 | New                 |
+| toggle_all                   | <kbd>%</kbd> <kbd>ctrl+a</kbd>                 | Select all          |
+| zip                          | <kbd>E</kbd>                                   | Zip                 |
+| unzip                        | <kbd>ctrl+e</kbd>                              | Unzip               |
+| copy_path                    | <kbd>Y</kbd>                                   | Copy path           |
+| up                           | <kbd>up</kbd> <kbd>k</kbd>                     | Up                  |
+| down                         | <kbd>down</kbd> <kbd>j</kbd>                   | Down                |
+| up_tree                      | <kbd>left</kbd> <kbd>h</kbd>                   | Go up directory     |
+| down_tree                    | <kbd>right</kbd> <kbd>l</kbd> <kbd>enter</kbd> | Enter/Select        |
+| page_up                      | <kbd>pageup</kbd> <kbd>ctrl+b</kbd>            | Page Up             |
+| page_down                    | <kbd>pagedown</kbd> <kbd>ctrl+f</kbd>          | Page Down           |
+| home                         | <kbd>home</kbd> <kbd>g</kbd>                   | First               |
+| end                          | <kbd>end</kbd> <kbd>G</kbd>                    | Last                |
+| hist_previous                | <kbd>backspace</kbd> <kbd>u</kbd>              | History back        |
+| hist_next                    | <kbd>space</kbd>                               | History forward     |
+| toggle_visual                | <kbd>v</kbd>                                   | Visual mode         |
+| toggle_hidden_files          | <kbd>full_stop</kbd>                           | Toggle hidden files |
+| select_up                    | <kbd>shift+up</kbd> <kbd>K</kbd>               | Select up           |
+| select_down                  | <kbd>shift+down</kbd> <kbd>J</kbd>             | Select down         |
+| select_page_up               | <kbd>shift+pageup</kbd>                        | Select page up      |
+| select_page_down             | <kbd>shift+pagedown</kbd>                      | Select page down    |
+| select_home                  | <kbd>shift+home</kbd>                          | Select to top       |
+| select_end                   | <kbd>shift+end</kbd>                           | Select to end       |
+| tab_next                     | <kbd>ctrl+j</kbd>                              | Next tab            |
+| tab_previous                 | <kbd>ctrl+k</kbd>                              | Previous tab        |
+| tab_new                      | <kbd>n</kbd>                                   | New tab             |
+| tab_close                    | <kbd>w</kbd>                                   | Close tab           |
+| preview_scroll_left          | <kbd>left</kbd> <kbd>h</kbd>                   | Scroll left         |
+| preview_scroll_right         | <kbd>right</kbd> <kbd>l</kbd>                  | Scroll right        |
+| preview_select_right         | <kbd>shift+right</kbd> <kbd>L</kbd>            | Select right        |
+| preview_select_left          | <kbd>shift+left</kbd> <kbd>H</kbd>             | Select left         |
+| show_keybinds                | <kbd>question_mark</kbd>                       | Show keybinds       |
