--- a/docs/src/content/docs/guides/file-operations.mdx
+++ b/docs/src/content/docs/guides/file-operations.mdx
@@ -3,7 +3,7 @@ title: file operations
 description: how to manage files and folders in rovr.
 ---
 
-`rovr` provides a comprehensive set of actions to manage your files and folders.
+rovr provides a comprehensive set of actions to manage your files and folders.
 
 ### clipboard actions
 
@@ -36,3 +36,10 @@ once in visual mode, you can select multiple files:
 - select page down: `shift+pagedown`
 - select to start of list: `shift+home`
 - select to end of list: `shift+end`
+
+### mouse interactions
+
+rovr supports mouse interactions for enhanced usability:
+
+- **right-click**: open a context menu for the selected file or folder with common operations
+- **double click**: open the directory/launch the app
