--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -3,11 +3,11 @@ title: tutorial
 description: a tutorial to using rovr
 ---
 
-this tutorial will guide you through the basic usage of `rovr`.
+this tutorial covers the basic usage of rovr.
 
 ## panel traversal
 
-`rovr` uses a background-highlighted option to show your currently selected item, and switches to a different colored text when unfocused.
+rovr uses a background-highlighted option to show your currently selected item, and switches to a different colored text when unfocused.
 
 ### travelling in lists
 
@@ -25,6 +25,7 @@ this tutorial will guide you through the basic usage of `rovr`.
 - go back in history: `backspace` or `u`
 - go forwards in history: `space`
 - pin the currently focused folder: `shift+p`
+- toggle hidden files visibility: `.` (period key)
 - reload file list: `ctrl+r`
 
 for more details on the user interface, see the [user interface guide](/rovr/guides/user-interface).
