--- a/docs/src/content/docs/guides/user-interface.mdx
+++ b/docs/src/content/docs/guides/user-interface.mdx
@@ -3,7 +3,7 @@ title: user interface
 description: an overview of the rovr user interface and how to navigate it.
 ---
 
-`rovr`'s user interface is composed of several panels. you can navigate between them using the keyboard.
+rovr's user interface has several panels that you can navigate between using the keyboard.
 
 ### panels
 
@@ -27,11 +27,26 @@ you can show or hide panels to customize your view:
 - preview sidebar: `shift+i`
 - footer (all three panels): `shift+f`
 
+### compact mode
+
+rovr supports a compact mode for smaller terminal windows or when you want to maximize the file list space. in compact mode, the footer panels automatically hide when they're not in use, giving you more space for file browsing.
+
+To enable compact mode, set the following in your `config.toml`:
+
+```toml
+[interface]
+compact_mode = true
+```
+
 ### tabs
 
-`rovr` supports tabs to manage multiple file list views simultaneously.
+rovr supports tabs to manage multiple file list views simultaneously.
 
 - create a new tab: `n`
 - close the current tab: `w`
 - go to the next tab: `ctrl+j`
 - go to the previous tab: `ctrl+k`
+
+### help and shortcuts
+
+- view all available keybindings: `?` - this opens a help screen showing all available shortcuts and their functions
