--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -19,18 +19,15 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
   <Card title="modern tui" icon="laptop">
-    `rovr` provides a modern and intuitive terminal user interface powered by
-    Textual.
+    `rovr` provides a modern and intuitive terminal user interface powered by Textual.
   </Card>
   <Card title="customizable" icon="setting">
-    tailor the appearance, keybindings, and features to your liking through
-    simple configuration files.
+    tailor the appearance, keybindings, and features to your liking through simple configuration files.
   </Card>
   <Card title="feature-rich" icon="rocket">
-    enjoy tabs, file previews, plugins, and other features you thought you
-    didn't need.
+    enjoy tabs, file previews, plugins, and other features you thought you didn't need.
   </Card>
   <Card title="cross-platform" icon="open-book">
-    works on windows, macos, and linux.
+  works on windows, macos and linux out of the box, without any issues
   </Card>
 </CardGrid>
