--- a/docs/src/content/docs/features/cd-on-quit.mdx
+++ b/docs/src/content/docs/features/cd-on-quit.mdx
@@ -24,33 +24,83 @@ set the `cd_on_quit` option to `true` in your `config.toml` file.
 add a function to your shell config that wraps the `rovr` command.
 
 <Tabs>
-<TabItem label="bash / zsh">
-<Code
-  code={`rovr () {\n    "rovr" "$@"\n    cd_path_file="$XDG_CONFIG_HOME/rovr/rovr_quit_cd_path"\n    if [ -f "$cd_path_file" ]; then\n        cd "$(cat \"$cd_path_file\")"\n        rm -f "$cd_path_file"\n    fi\n}`}
-  lang="bash"
-  frame="code"
-/>
-</TabItem>
-<TabItem label="fish">
-<Code
-  code={`function rovr\n    command rovr $argv\n    set cd_path_file "$XDG_CONFIG_HOME/rovr/rovr_quit_cd_path"\n    if test -f "$cd_path_file"\n        cd (cat "$cd_path_file")\n        rm -f "$cd_path_file"\n    end\nend`}
-  lang="fish"
-  frame="code"
-/>
-</TabItem>
-<TabItem label="powershell">
-<Code
-  code={`function rovr {\n    param ( [string[]]$Params )\n    & rovr.exe $Params\n    $cd_path_file = "$env:LOCALAPPDATA\\rovr\\rovr_quit_cd_path"\n    if (Test-Path $cd_path_file) {\n        Set-Location -Path (Get-Content $cd_path_file)\n        Remove-Item $cd_path_file\n    }\n}`}
-  lang="powershell"
-  frame="code"
-/>
-Powershell may prevent you from running such functions, so you may have to run
-<Code
-  code={`Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope LocalMachine`}
-  lang="powershell"
-/>
-for it to work. For more information on `Set-ExecutionPolicy`, refer to its [docs](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.security/set-executionpolicy)
-</TabItem>
+  <TabItem label="Linux">
+    <Tabs>
+      <TabItem label="bash">
+        <Code
+          code={`rovr () {\n    command rovr "$@"\n    config_dir="\${XDG_CONFIG_HOME:-$HOME/.config}"\n    cd_path_file="$config_dir/rovr/rovr_quit_cd_path"\n    if [ -f "$cd_path_file" ]; then\n        cd "$(cat \\"$cd_path_file\\")"\n        rm -f "$cd_path_file"\n    fi\n}`}
+          lang="bash"
+          frame="code"
+        />
+      </TabItem>
+      <TabItem label="fish">
+        <Code
+          code={`function rovr\n    command rovr $argv\n    set config_dir "$HOME/.config"\n    if set -q XDG_CONFIG_HOME\n        set config_dir "$XDG_CONFIG_HOME"\n    end\n    set cd_path_file "$config_dir/rovr/rovr_quit_cd_path"\n    if test -f "$cd_path_file"\n        cd (cat "$cd_path_file")\n        rm -f "$cd_path_file"\n    end\nend`}
+          lang="fish"
+          frame="code"
+        />
+      </TabItem>
+      <TabItem label="nushell">
+        <Code
+          code={`def --env --wrapped rovr [...args: string] {\n    ^rovr ...$args\n    let config_dir = ($env.XDG_CONFIG_HOME? | default ($env.HOME | path join ".config"))\n    let cd_path_file = ($config_dir | path join "rovr" "rovr_quit_cd_path")\n    if ($cd_path_file | path exists) {\n        cd ($cd_path_file | open | str trim)\n        rm $cd_path_file\n    }\n}`}
+          lang="nu"
+          frame="code"
+        />
+      </TabItem>
+    </Tabs>
+  </TabItem>
+  <TabItem label="macOS">
+    <Tabs>
+      <TabItem label="bash">
+        <Code
+          code={`rovr () {\n    command rovr "$@"\n    cd_path_file="$HOME/Library/Application Support/rovr/rovr_quit_cd_path"\n    if [ -f "$cd_path_file" ]; then\n        cd "$(cat \\"$cd_path_file\\")"\n        rm -f "$cd_path_file"\n    fi\n}`}
+          lang="bash"
+          frame="code"
+        />
+      </TabItem>
+      <TabItem label="fish">
+        <Code
+          code={`function rovr\n    command rovr $argv\n    set cd_path_file "$HOME/Library/Application Support/rovr/rovr_quit_cd_path"\n    if test -f "$cd_path_file"\n        cd (cat "$cd_path_file")\n        rm--env  -f "$cd_path_file"\n    end\nend`}
+          lang="fish"
+          frame="code"
+        />
+      </TabItem>
+      <TabItem label="nushell">
+        <Code
+          code={`def rovr [...args: string] {\n    ^rovr ...$args\n    let cd_path_file = ($env.HOME | path join "Library" "Application Support" "rovr" "rovr_quit_cd_path")\n    if ($cd_path_file | path exists) {\n        cd ($cd_path_file | open | str trim)\n        rm $cd_path_file\n    }\n}`}
+          lang="nu"
+          frame="code"
+        />
+      </TabItem>
+    </Tabs>
+  </TabItem>
+  <TabItem label="Windows">
+    <Tabs>
+      <TabItem label="powershell">
+        <Code
+          code={`function rovr {\n    param ( [string[]]$Params )\n    & rovr.exe $Params\n    $cd_path_file = "$env:LOCALAPPDATA\\rovr\\rovr_quit_cd_path"\n    if (Test-Path $cd_path_file) {\n        Set-Location -Path (Get-Content $cd_path_file)\n        Remove-Item $cd_path_file\n    }\n}`}
+          lang="powershell"
+          frame="code"
+        />
+        Powershell may prevent you from running such functions, so you may have
+        to run
+        <Code
+          code={`Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope LocalMachine`}
+          lang="powershell"
+        />
+        for it to work. For more information on `Set-ExecutionPolicy`, refer to
+        its
+        [docs](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.security/se--env t-executionpolicy)
+      </TabItem>
+      <TabItem label="nushell">
+        <Code
+          code={`def rovr [...args: string] {\n    ^rovr.exe ...$args\n    let cd_path_file = ($env.LOCALAPPDATA | path join "rovr" "rovr_quit_cd_path")\n    if ($cd_path_file | path exists) {\n        cd ($cd_path_file | open | str trim)\n        rm $cd_path_file\n    }\n}`}
+          lang="nu"
+          frame="code"
+        />
+      </TabItem>
+    </Tabs>
+  </TabItem>
 </Tabs>
 
 <Aside type="note">
@@ -60,7 +110,7 @@ for it to work. For more information on `Set-ExecutionPolicy`, refer to its [doc
   adjust paths based on your specific installation.
 </Aside>
 
-## CLI options (Yazi-style)
+## CLI options
 
 rovr also supports Yazi-style CLI options for direct integration with scripts and other tools:
 
